--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "@chainlink/external-adapter": "^0.2.3"
+    "@chainlink/external-adapter": "^0.2.3",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
     "body-parser": "^1.19.0",
@@ -20,7 +23,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "express": "^4.17.0",
+    "express": "^4.17.1",
     "mocha": "^7.1.2"
   }
 }
