--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chainlink/external-adapter": "^0.2.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ethers": "^5.5.1",
     "keccak256": "^1.0.3",
     "needle": "^3.0.0",
     "twitter": "^1.7.1"
