--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chainlink/external-adapter": "^0.2.3",
+    "cbor": "^8.0.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ethers": "^5.5.1",
